Individualized the CSS for the <main> element to prevent CSS bleed.

--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -12,7 +12,7 @@
   }
 }
 
-main {
+.main-content {
     padding: 1rem;
 }
 
