--- a/src/styles/MoviesPage.css
+++ b/src/styles/MoviesPage.css
@@ -1,4 +1,4 @@
-main {
+.movie-page-main {
     display: flex;
     flex-direction: column;
     align-items: center;
